<?xml version="1.0" encoding="utf-8"?>

<!-- Copyright (c) 2015. Seagate Technology PLC. All rights reserved. -->

<!--android:background="@drawable/side_nav_bar"-->

<!--android:layout_height="@dimen/nav_header_height"-->


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:gravity="bottom"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/avatar"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="Tim Bucher"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="tim.bucher@seagate.com"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse"/>

</LinearLayout>
